# etl-voucher-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
airflow/dags/: etl__customer_voucher_assignment.py  etl__customer_voucher_assignment__with_spark.py
airflow/dags/sql/customer/: administrative.sql  data_load_voucher_segmentation.sql  model_voucher_segmentation.sql
docker/airflow/: Dockerfile  requirements.txt
docker/api/: Dockerfile
docker/postgres/: Dockerfile
docker/spark_app/: Dockerfile
notebooks/: README.md  voucher_data_analysis.ipynb
src/app/: __init__.py  db.py  exceptions.py  helper.py  main.py  schemas.py
src/etl/: __init__.py  enums.py  executor.py  helpers.py  main.py
src/etl/customer/: __init__.py  factory.py  voucher.py
src/voucher/etl/: cli.py  extract.py
tests/: conftest.py
tests/etl/: test_enums.py  test_executor.py  test_helpers.py
tests/etl/customer/: test_factory.py
