[metadata]
name = voucher-etl
version = 0.0.1-alpha1
description = Voucher ETL Framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords = voucher-etl
author = Ashish M G
classifiers = 
    Programming Language :: Python :: 3
    Indended Audience :: Developers
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
package_dir = 
    = src
install_requires = 
    pyspark~=3.2
    pandas~=1.4
    python-dotenv
    click~=8.1
    fastparquet

[options.packages.find]
where = src


[options.extras_require]
dev =
    pytest~=7.1
    pytest-cov~=3.0
    tox~=3.25
    pre-commit~=2.20
    black
    mypy>0.910
    isort
    flake8~=4.0
    flake8-docstrings~=1.6
    types-PyYAML
    apache-airflow[postgres, spark]==2.3.3
    # boto3==1.24.36
    # boto3-stubs[essential]==1.24.35

[options.package_data]
voucher_etl = py.typed

[options.entry_points]
console_scripts =
    voucher_etl = etl.main:main


[isort]
line_length = 110
combine_as_imports = true
skip = build,.tox,venv
profile = black

[flake8]
max-line-length = 110
ignore = 
    W503
    W504
    E741
    E501
    W605
exclude =
    .git
    venv
    __pycache__
docstring-convention = google 